--- a/.github/workflows/update-signals.yml
+++ b/.github/workflows/update-signals.yml
@@ -2,8 +2,11 @@ name: Update BTC Signals Every 15min
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # 매 15분마다 실행
-  workflow_dispatch:       # 수동 실행도 가능
+    - cron: '*/15 * * * *'
+  workflow_dispatch:
+
+permissions:
+  contents: write  # ✅ 푸시 권한 부여
 
 jobs:
   update:
@@ -31,4 +34,4 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add docs/signals.json
           git commit -m "🔄 Auto-update signals.json" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
